Fixing error jumping

--- a/web/modules/custom/afrikaburn_registration/css/afrikaburn-registration.css
+++ b/web/modules/custom/afrikaburn_registration/css/afrikaburn-registration.css
@@ -54,3 +54,13 @@
   text-transform: none;
   font-size: 100%;
 }
+
+#edit-roles .fieldset-wrapper{
+  display: flex;
+  flex-direction: column;
+}
+
+#edit-roles .fieldset-wrapper .form-item{
+  flex-basis: 30%;
+  min-width: 300px;
+}
